# projects

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: copy.rs  mod.rs
src-tauri/src/commands/: listen.rs  mod.rs  open_file.rs
src-tauri/src/create/: create_dir.rs
src-tauri/src/find/: get_driver_list.rs  get_files.rs  mod.rs
src-tauri/src/projects/: create_file.rs  mod.rs
src-tauri/src/remove/: remove.rs
src-tauri/src/update/: rename.rs
src/components/app-content/: index.vue
src/components/app-sider/: index.vue
src/pages/project/: index.vue
src/router/: index.js
src/store/: path.js
src/utils/: ClickOutside.js  db.js  tray.js
