[package]
name = "folders"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folders_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemstat = "0.2.4"
chrono = "0.4"
notify = { version = "8.0.0", features = ["serde"] }
uuid = { version = "1.14.0", features = ["v4"] }
once_cell = "1.20.3"
open = "5.3.2"
tauri-plugin-process = "2"
winapi = { version = "0.3.9", features = [ "winuser", "shellapi", "handleapi", "winnt", "shlobj"] }

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"